--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hello-world",
   "version": "1.0.0",
+  "homepage": "https://github.com/JonsMendi/ChatApp",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
